poms cleanup